--- a/CR_DeckAnalysis/CR_DeckAnalysis/MainWindow.xaml
+++ b/CR_DeckAnalysis/CR_DeckAnalysis/MainWindow.xaml
@@ -1,12 +1,42 @@
-﻿<Window x:Class="CR_DeckAnalysis.MainWindow"
+﻿<Window  x:Class="CR_DeckAnalysis.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CR_DeckAnalysis"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+       DataContext="{Binding RelativeSource={RelativeSource Self}}" 
+        ResizeMode="CanResize" 
+        Height="706.038" Width="1375.148" WindowStartupLocation="CenterScreen">
+
     <Grid>
-        
+        <Canvas x:Name="MainCanvas">
+
+            <Label x:Name="MenuTab" Content="Main Menu" HorizontalAlignment="Left" VerticalAlignment="Top" Width="104" Background="#25A0DA" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand" MouseDown="MenuTabClicked" Canvas.Left="10" Canvas.Top="15"/>
+            <Label x:Name="RawDataTab" Content="Advanced" HorizontalAlignment="Left" VerticalAlignment="Top" Width="104" Background="#FFCADDE4" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand"   MouseDown="RawTabClicked" Canvas.Left="114" Canvas.Top="15" />
+            <Label x:Name="FinalDataTab" Content="Settings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="104" Background="#FFCADDE4" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand" MouseDown="FinalTabClicked" Canvas.Left="218" Canvas.Top="15" />
+
+            <Label x:Name="TitleLabel" Content="Deck Analysis" HorizontalAlignment="Left" Canvas.Left="402" Canvas.Right="20" VerticalAlignment="Top" Width="572" FontFamily="Segoe UI Light" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Padding="1" FontWeight="Bold" Foreground="#FF4F4F4F" Canvas.Top="10"/>
+            <!-- Main Warehouse Display Tab -->
+            <Canvas x:Name="MenuTabCanvas" Visibility="Visible">
+
+                <!-- <Label x:Name="DemoButton" Content="Launch Demo" HorizontalAlignment="Left" VerticalAlignment="Top" Width="104" Background="#25A0DA" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand" MouseDown="LaunchDemoClicked" Canvas.Left="151" Canvas.Top="87"/> -->
+                <Label x:Name="CreateWarehouseButton" Content="Initialize" HorizontalAlignment="Left" VerticalAlignment="Top" Width="72" Background="#25A0DA" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand" Canvas.Left="18" Canvas.Top="150"/>
+               </Canvas>
+
+            <!-- Unused Tab -->
+            <Canvas x:Name="RawTabCanvas" Visibility="Hidden">
+
+
+            </Canvas>
+
+            <!-- Settings Tab -->
+            <Canvas x:Name="FinalTabCanvas" Visibility="Hidden">
+               </Canvas>
+
+
+
+        </Canvas>
     </Grid>
 </Window>
+
